<resources>
    <string name="app_name">Restaurante</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="tvregistro">Regístrate</string>
    <string name="btniniciar">Iniciar Sesión</string>
    <string name="registro">REGISTRO DE USUARIO</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="btnregistrar">Registrar</string>
    <string name="joeburger">JOE BURGER</string>
    <string name="title_activity_navegador">Navegador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="masopciones">Más Opciones</string>
    <string name="mesas">Mesas</string>
    <string name="menu">Menú</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="vermesa">Ver Mesa</string>
    <string name="verplato">Ver Plato</string>
    <string name="pIdMesa">Mesa</string>
    <string name="pCapacidad">Capacidad</string>
    <string name="pDisposicion">Disposicion</string>
    <string name="pConsumo">Consumo</string>
    <string name="btnDesocupar">Desocupar Mesa</string>
</resources>
