<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mesas"
            android:icon="@drawable/mesas"
            android:title="@string/mesas" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/menu"
            android:title="@string/menu" />
    </group>

    <item android:title="@string/masopciones">
        <menu>
            <item
                android:id="@+id/nav_cerrarsesion"
                android:icon="@drawable/cerrarsesion"
                android:title="@string/cerrarsesion" />
        </menu>
    </item>

</menu>
